--- a/simplesns/snsapp/templates/detail.html
+++ b/simplesns/snsapp/templates/detail.html
@@ -4,7 +4,7 @@
 <div class="d-flex align-items-center flex-column">
     <h2><!-- 게시글 제목 --></h2>
     <small><!-- 게시글 날짜 --></small>
-    <p><!-- 게시글 내용 -->></p>
+    <p><!-- 게시글 내용 --></p>
     <hr width="40%">
 </div>
 
