--- a/simplesns/snsapp/templates/layouts/header.html
+++ b/simplesns/snsapp/templates/layouts/header.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>멋쟁이 사자 10기 :: 장고</title>
-  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 </head>
 
 <body>
